--- a/components/PartnerBrowseComponents/PartnerBrowseContent.scss
+++ b/components/PartnerBrowseComponents/PartnerBrowseContent.scss
@@ -42,6 +42,17 @@
 }
 
 .partnerMap {
-  text-align: center;
+  position: relative;
+  margin-top: 5%;
+  padding-bottom: 75%;
+  height: 0;
+  overflow: hidden;
+}
+
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
 }
