--- a/pages/local/browse-by-contributor/ContributorBrowseComponents/ContributorBrowseContent.scss
+++ b/pages/local/browse-by-contributor/ContributorBrowseComponents/ContributorBrowseContent.scss
@@ -4,7 +4,7 @@
   width: 100%;
 }
 
-.partnerBrowse {
+.contributorBrowse {
   line-height: 1.25;
   margin-top: 2rem;
   padding-bottom: 5.5rem;
@@ -14,14 +14,7 @@
   }
 }
 
-.partners {
-  display: grid;
-  grid-column-gap: 6rem;
-  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
-  padding: 0 0.5rem;
-}
-
-.partnerLink {
+.contributorLink {
   border-bottom: 0.075rem solid $grayBorderColor;
   display: flex;
   height: 100%;
@@ -39,4 +32,20 @@
   color: $dimmedTextColor;
   font-size: 1.25rem;
   margin-left: auto;
+}
+
+.contributorMap {
+  position: relative;
+  margin-top: 5%;
+  padding-bottom: 75%;
+  height: 0;
+  overflow: hidden;
+}
+
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
