--- a/components/shared/ContentPagesSidebar/Sidebar.scss
+++ b/components/shared/ContentPagesSidebar/Sidebar.scss
@@ -4,6 +4,13 @@
   background-color: $warmerBackgroundColor;
   padding: 1rem 1.5rem;
 
+  & .localParentLabel {
+    font-size: 1.2rem;
+    display: inline-block;
+    color: rgba(0, 0, 0, 0.65);
+    margin-bottom: 0.5rem;
+  }
+
   & .link {
     display: inline-block;
     color: rgba(0, 0, 0, 0.65);
