--- a/pages/local/browse/places/PlaceBrowseComponents/PlaceBrowseContent.scss
+++ b/pages/local/browse/places/PlaceBrowseComponents/PlaceBrowseContent.scss
@@ -1,18 +1,5 @@
 @import "stylesheets/variables";
 
-.featureTitle {
-  width: 100%;
-}
-
-.placeBrowse {
-  line-height: 1.25;
-  margin-top: 2rem;
-
-  @media (min-width: $largeRem) {
-    margin-top: 2rem;
-  }
-}
-
 .descriptionText {
   font-size: .9rem;
 }
@@ -30,10 +17,9 @@
 
 .placeLink {
   border-bottom: 0.075rem;
+  display: flex;
   height: 100%;
   padding: 0.85rem 0;
-  display: flex;
-  flex-wrap: wrap;
 }
 
 .textWrapper {
@@ -45,13 +31,7 @@
   font-family: $serifFont;
   font-size: 1.3125rem;
   margin-right: 0.75rem;
-  max-width: 66%;
-}
-
-.itemCount {
-  color: $dimmedTextColor;
-  font-size: 1.25rem;
-  margin-left: auto;
+  max-width: 100%;
 }
 
 .imageWrapper {
@@ -67,7 +47,7 @@
   }
 }
 
-.locationImageLink {
+.placeImageLink {
   align-items: center;
   background-color: white;
   display: flex;
