--- a/pages/local/browse/BrowseLandingPage.scss
+++ b/pages/local/browse/BrowseLandingPage.scss
@@ -1,15 +1,5 @@
 @import "stylesheets/variables";
 
-.browse {
-  line-height: 1.25;
-  margin-top: 2rem;
-  padding-bottom: 5.5rem;
-
-  @media (min-width: $largeRem) {
-    margin-top: 4rem;
-  }
-}
-
 .browseCategories {
   display: grid;
   grid-column-gap: 2rem;
@@ -17,15 +7,11 @@
   padding: 0 0.5rem;
 }
 
-.descriptionText {
-  font-size: .9rem;
-}
-
 .browseCategory {
   border-bottom: 0.075rem solid $lightBorderColor;
   display: flex;
   flex-wrap: wrap;
-  padding: 15px 0;
+  padding: 2rem 0;
 
   @media (min-width: $mediumRem) {
     flex-wrap: nowrap;
@@ -40,19 +26,13 @@
 }
 
 .textWrapper {
-  max-width: 50%;
-}
-
-.name {
-  font-family: $serifFont;
-  font-size: 1.3125rem;
-  margin-right: 0.75rem;
   max-width: 100%;
+  margin: 0 0.5rem;
 }
 
 .imageWrapper {
   border: 0.075rem solid rgba(0, 0, 0, 0.1);
-  height: 10rem;
+  height: 20rem;
   margin: 0 0.5rem;
   width: calc(100% - 1rem);
 
@@ -60,19 +40,4 @@
     margin: 0 1rem;
     width: calc(100% - 2rem);
   }
-}
-
-.imageLink {
-  align-items: center;
-  background-color: white;
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  padding: 0.5rem;
-  width: 100%;
-}
-
-.image {
-  max-height: 100%;
-  max-width: 100%;
 }
