--- a/pages/local/browse/browse.scss
+++ b/pages/local/browse/browse.scss
@@ -2,8 +2,8 @@
 
 .browse {
   line-height: 1.25;
-  margin-top: 2rem;
-  padding-bottom: 5.5rem;
+  margin-top: 0.1rem;
+  padding-bottom: 0.1rem;
 
   @media (min-width: $largeRem) {
     margin-top: 4rem;
@@ -15,4 +15,23 @@
   grid-column-gap: 6rem;
   grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
   padding: 0 0.5rem;
+}
+
+.descriptionText {
+  font-size: .9rem;
+}
+
+.imageLink {
+  align-items: center;
+  background-color: white;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  padding: 0.5rem;
+  width: 100%;
+}
+
+.image {
+  max-height: 100%;
+  max-width: 100%;
 }
