--- a/pages/local/browse/BrowseLandingPage.scss
+++ b/pages/local/browse/BrowseLandingPage.scss
@@ -1,5 +1,15 @@
 @import "stylesheets/variables";
 
+.header {
+  font-size: 2rem;
+  font-family: $serifFont;
+  font-weight: normal;
+
+  @media (min-width: $smallRem) {
+    font-size: 3rem;
+  }
+}
+
 .browseCategories {
   display: grid;
   grid-column-gap: 2rem;
