--- a/pages/local/browse/browse.scss
+++ b/pages/local/browse/browse.scss
@@ -1,12 +1,24 @@
 @import "stylesheets/variables";
 
+.header {
+  text-align: center;
+  font-size: 3rem;
+  font-family: $serifFont;
+  font-weight: normal;
+  margin-top: 2rem;
+
+  @media (min-width: $smallRem) {
+    font-size: 4rem;
+  }
+}
+
 .browse {
   line-height: 1.25;
   margin-top: 0.1rem;
   padding-bottom: 0.1rem;
 
   @media (min-width: $largeRem) {
-    margin-top: 4rem;
+    margin-top: 2rem;
   }
 }
 
