Revert "Merge branch 'master' into browse-landing-page-with-format-browse"
This reverts commit 5f0216742d3835763cd81125992c0170b8f8accd, reversing
changes made to 553e86d08e4b5dc00827dd5954fca91338d7a853.

--- a/components/HomePageComponents/HomeHero/HomeHero.scss
+++ b/components/HomePageComponents/HomeHero/HomeHero.scss
@@ -1,7 +1,7 @@
 @import "stylesheets/variables";
 
 .wrapper {
-  background-color: $heroBackgroundColor;
+  background-color: rgb(47, 74, 87);
   background-size: cover;
   color: white;
 
